update with 64 changes

--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,11 +76,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org0c4d2c1">사용법</a>
+<li><a href="#org1807c9a">사용법</a>
 <ul>
-<li><a href="#orgd9544f8">무제한 잠자기 방지</a></li>
-<li><a href="#orgfafd630">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org162ae08">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org49c3feb">무제한 잠자기 방지</a></li>
+<li><a href="#org566d52d">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org99a3939">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -86,13 +91,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org0c4d2c1" class="outline-2">
-<h2 id="org0c4d2c1">사용법</h2>
-<div class="outline-text-2" id="text-org0c4d2c1">
+<div id="outline-container-org1807c9a" class="outline-2">
+<h2 id="org1807c9a">사용법</h2>
+<div class="outline-text-2" id="text-org1807c9a">
 </div>
-<div id="outline-container-orgd9544f8" class="outline-3">
-<h3 id="orgd9544f8">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgd9544f8">
+<div id="outline-container-org49c3feb" class="outline-3">
+<h3 id="org49c3feb">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org49c3feb">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -103,9 +108,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgfafd630" class="outline-3">
-<h3 id="orgfafd630">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgfafd630">
+<div id="outline-container-org566d52d" class="outline-3">
+<h3 id="org566d52d">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org566d52d">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -116,9 +121,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org162ae08" class="outline-3">
-<h3 id="org162ae08">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org162ae08">
+<div id="outline-container-org99a3939" class="outline-3">
+<h3 id="org99a3939">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org99a3939">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
@@ -153,9 +158,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </script>
 </div>
 </div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
