--- a/note/dd.html
+++ b/note/dd.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,9 +76,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge1302e0">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#org05191b1">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#org6ecf0a7">팁</a></li>
+<li><a href="#org4668aa6">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#org63c68ce">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#org7b479fe">팁</a></li>
 </ul>
 </div>
 </div>
@@ -90,9 +95,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-orge1302e0" class="outline-2">
-<h2 id="orge1302e0">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-orge1302e0">
+<div id="outline-container-org4668aa6" class="outline-2">
+<h2 id="org4668aa6">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-org4668aa6">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -142,9 +147,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org05191b1" class="outline-2">
-<h2 id="org05191b1">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-org05191b1">
+<div id="outline-container-org63c68ce" class="outline-2">
+<h2 id="org63c68ce">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-org63c68ce">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -166,9 +171,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org6ecf0a7" class="outline-2">
-<h2 id="org6ecf0a7">팁</h2>
-<div class="outline-text-2" id="text-org6ecf0a7">
+<div id="outline-container-org7b479fe" class="outline-2">
+<h2 id="org7b479fe">팁</h2>
+<div class="outline-text-2" id="text-org7b479fe">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
@@ -187,6 +192,16 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<hr /><div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/diskutil.html">diskutil</a></h2>
+<div class="article-link-date">
+2020년 4월 22일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
@@ -200,19 +215,13 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </script>
 </div>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/diskutil.html">diskutil</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
