--- a/note/definition.html
+++ b/note/definition.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,10 +76,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org522a499">대충 사용하는 의미</a></li>
-<li><a href="#org5959a30">구세대 언어의 예</a></li>
-<li><a href="#orge40b557">현대적인 언어의 예</a></li>
-<li><a href="#org7548476">결론</a></li>
+<li><a href="#org4c71ff7">대충 사용하는 의미</a></li>
+<li><a href="#org81bdad8">구세대 언어의 예</a></li>
+<li><a href="#org0800775">현대적인 언어의 예</a></li>
+<li><a href="#orgca6f9b9">결론</a></li>
 </ul>
 </div>
 </div>
@@ -83,9 +88,9 @@ gtag('config', 'UA-44534026-1');
 IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(definition) 개념을 다룬다.
 </p>
 
-<div id="outline-container-org522a499" class="outline-2">
-<h2 id="org522a499">대충 사용하는 의미</h2>
-<div class="outline-text-2" id="text-org522a499">
+<div id="outline-container-org4c71ff7" class="outline-2">
+<h2 id="org4c71ff7">대충 사용하는 의미</h2>
+<div class="outline-text-2" id="text-org4c71ff7">
 <blockquote>
 <p>
 정의하다 = 코딩하다
@@ -101,9 +106,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org5959a30" class="outline-2">
-<h2 id="org5959a30">구세대 언어의 예</h2>
-<div class="outline-text-2" id="text-org5959a30">
+<div id="outline-container-org81bdad8" class="outline-2">
+<h2 id="org81bdad8">구세대 언어의 예</h2>
+<div class="outline-text-2" id="text-org81bdad8">
 <p>
 예를 들어 C 언어의 경우 정의는 아래와 같은 식이다.
 </p>
@@ -140,9 +145,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-orge40b557" class="outline-2">
-<h2 id="orge40b557">현대적인 언어의 예</h2>
-<div class="outline-text-2" id="text-orge40b557">
+<div id="outline-container-org0800775" class="outline-2">
+<h2 id="org0800775">현대적인 언어의 예</h2>
+<div class="outline-text-2" id="text-org0800775">
 <p>
 예를 들어 <a href="swift.html">Swift</a>로 구조체를 정의하는 방법을 보자.
 </p>
@@ -173,9 +178,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org7548476" class="outline-2">
-<h2 id="org7548476">결론</h2>
-<div class="outline-text-2" id="text-org7548476">
+<div id="outline-container-orgca6f9b9" class="outline-2">
+<h2 id="orgca6f9b9">결론</h2>
+<div class="outline-text-2" id="text-orgca6f9b9">
 <blockquote>
 <p>
 정의와 구현은 일단은 다르다.
@@ -197,19 +202,6 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
-<div class="side-ad-container">
-<ins class="adsbygoogle side-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
-</div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
@@ -227,9 +219,26 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </div>
 </div>
 </div>
+</section>
+<div class="side-ad-container">
+<ins class="adsbygoogle side-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
