--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,12 +76,12 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge18159c">단축키</a>
+<li><a href="#orgeafa76b">단축키</a>
 <ul>
-<li><a href="#org4c1af4e">프로젝트(Project)</a></li>
-<li><a href="#orgc8827fd">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#orgf182d34">타임라인(Timeline)</a></li>
-<li><a href="#orgbd47570">플레이(Play or Preview)</a></li>
+<li><a href="#orgd7e0daf">프로젝트(Project)</a></li>
+<li><a href="#org1f29d41">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org26af9e7">타임라인(Timeline)</a></li>
+<li><a href="#orgd34c5e4">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -88,13 +93,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-orge18159c" class="outline-2">
-<h2 id="orge18159c">단축키</h2>
-<div class="outline-text-2" id="text-orge18159c">
+<div id="outline-container-orgeafa76b" class="outline-2">
+<h2 id="orgeafa76b">단축키</h2>
+<div class="outline-text-2" id="text-orgeafa76b">
 </div>
-<div id="outline-container-org4c1af4e" class="outline-3">
-<h3 id="org4c1af4e">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org4c1af4e">
+<div id="outline-container-orgd7e0daf" class="outline-3">
+<h3 id="orgd7e0daf">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-orgd7e0daf">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -103,9 +108,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgc8827fd" class="outline-3">
-<h3 id="orgc8827fd">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-orgc8827fd">
+<div id="outline-container-org1f29d41" class="outline-3">
+<h3 id="org1f29d41">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-org1f29d41">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -120,9 +125,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgf182d34" class="outline-3">
-<h3 id="orgf182d34">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-orgf182d34">
+<div id="outline-container-org26af9e7" class="outline-3">
+<h3 id="org26af9e7">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org26af9e7">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -147,9 +152,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgbd47570" class="outline-3">
-<h3 id="orgbd47570">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-orgbd47570">
+<div id="outline-container-orgd34c5e4" class="outline-3">
+<h3 id="orgd34c5e4">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-orgd34c5e4">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -170,6 +175,16 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<hr /><div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
+<div class="article-link-date">
+2020년 4월 23일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
@@ -183,19 +198,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </script>
 </div>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/motion.html">Motion</a></h2>
-<div class="article-link-date">
-2020년 4월 23일 수정</div>
-</div>
-</div>
-</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
