--- a/note/flake8.html
+++ b/note/flake8.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,11 +76,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc69902e">설치</a></li>
-<li><a href="#org09480aa">사용법</a></li>
-<li><a href="#org0381397">설정 파일</a></li>
-<li><a href="#orgf44735c">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#org0ee7fb0">외부 링크</a></li>
+<li><a href="#org946d845">설치</a></li>
+<li><a href="#org8d38307">사용법</a></li>
+<li><a href="#orgbf83043">설정 파일</a></li>
+<li><a href="#orgefe4c58">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#org9249d6b">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -87,9 +92,9 @@ gtag('config', 'UA-44534026-1');
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-orgc69902e" class="outline-2">
-<h2 id="orgc69902e">설치</h2>
-<div class="outline-text-2" id="text-orgc69902e">
+<div id="outline-container-org946d845" class="outline-2">
+<h2 id="org946d845">설치</h2>
+<div class="outline-text-2" id="text-org946d845">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -99,9 +104,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-org09480aa" class="outline-2">
-<h2 id="org09480aa">사용법</h2>
-<div class="outline-text-2" id="text-org09480aa">
+<div id="outline-container-org8d38307" class="outline-2">
+<h2 id="org8d38307">사용법</h2>
+<div class="outline-text-2" id="text-org8d38307">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -121,9 +126,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0381397" class="outline-2">
-<h2 id="org0381397">설정 파일</h2>
-<div class="outline-text-2" id="text-org0381397">
+<div id="outline-container-orgbf83043" class="outline-2">
+<h2 id="orgbf83043">설정 파일</h2>
+<div class="outline-text-2" id="text-orgbf83043">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -155,9 +160,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-orgf44735c" class="outline-2">
-<h2 id="orgf44735c">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-orgf44735c">
+<div id="outline-container-orgefe4c58" class="outline-2">
+<h2 id="orgefe4c58">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-orgefe4c58">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -190,9 +195,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-org0ee7fb0" class="outline-2">
-<h2 id="org0ee7fb0">외부 링크</h2>
-<div class="outline-text-2" id="text-org0ee7fb0">
+<div id="outline-container-org9249d6b" class="outline-2">
+<h2 id="org9249d6b">외부 링크</h2>
+<div class="outline-text-2" id="text-org9249d6b">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
@@ -225,9 +230,13 @@ exclude = file_to_exclude.py
 </script>
 </div>
 </div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
