--- a/note/macos.html
+++ b/note/macos.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,9 +76,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org84254bc">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgb98cb8e">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orge7a9289">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org15cc443">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org307e175">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgae6722b">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -98,17 +103,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org84254bc" class="outline-2">
-<h2 id="org84254bc">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org84254bc">
+<div id="outline-container-org15cc443" class="outline-2">
+<h2 id="org15cc443">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org15cc443">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgb98cb8e" class="outline-2">
-<h2 id="orgb98cb8e">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgb98cb8e">
+<div id="outline-container-org307e175" class="outline-2">
+<h2 id="org307e175">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org307e175">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -128,9 +133,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge7a9289" class="outline-2">
-<h2 id="orge7a9289">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orge7a9289">
+<div id="outline-container-orgae6722b" class="outline-2">
+<h2 id="orgae6722b">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgae6722b">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -157,19 +162,6 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</div>
-</section>
-<div class="side-ad-container">
-<ins class="adsbygoogle side-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -314,9 +306,26 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </div>
 </div>
 </div>
+</section>
+<div class="side-ad-container">
+<ins class="adsbygoogle side-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
