--- a/note/magit.html
+++ b/note/magit.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,16 +76,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org521854b">magit-status</a></li>
-<li><a href="#org34a8333">Stage</a></li>
-<li><a href="#orgd007411">Commit</a></li>
-<li><a href="#orgec02ea8">Log</a></li>
-<li><a href="#orgee51b92">Push</a></li>
-<li><a href="#orgef93765">Pull</a></li>
-<li><a href="#orgf0d5146">Branch</a></li>
-<li><a href="#org784ed4e">Reset or Revert</a></li>
-<li><a href="#org526583e">기타</a></li>
-<li><a href="#org9422382">외부 링크</a></li>
+<li><a href="#orgb981d25">magit-status</a></li>
+<li><a href="#orgf20a8b1">Stage</a></li>
+<li><a href="#org02e044a">Commit</a></li>
+<li><a href="#orgaaca857">Log</a></li>
+<li><a href="#org14e6e61">Push</a></li>
+<li><a href="#org27b03ac">Pull</a></li>
+<li><a href="#orgddfc2f4">Branch</a></li>
+<li><a href="#orgac8ddb6">Reset or Revert</a></li>
+<li><a href="#org5ffba2d">기타</a></li>
+<li><a href="#orge852c0d">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -101,9 +106,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-org521854b" class="outline-2">
-<h2 id="org521854b">magit-status</h2>
-<div class="outline-text-2" id="text-org521854b">
+<div id="outline-container-orgb981d25" class="outline-2">
+<h2 id="orgb981d25">magit-status</h2>
+<div class="outline-text-2" id="text-orgb981d25">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -125,9 +130,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org34a8333" class="outline-2">
-<h2 id="org34a8333">Stage</h2>
-<div class="outline-text-2" id="text-org34a8333">
+<div id="outline-container-orgf20a8b1" class="outline-2">
+<h2 id="orgf20a8b1">Stage</h2>
+<div class="outline-text-2" id="text-orgf20a8b1">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -140,9 +145,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgd007411" class="outline-2">
-<h2 id="orgd007411">Commit</h2>
-<div class="outline-text-2" id="text-orgd007411">
+<div id="outline-container-org02e044a" class="outline-2">
+<h2 id="org02e044a">Commit</h2>
+<div class="outline-text-2" id="text-org02e044a">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -158,9 +163,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgec02ea8" class="outline-2">
-<h2 id="orgec02ea8">Log</h2>
-<div class="outline-text-2" id="text-orgec02ea8">
+<div id="outline-container-orgaaca857" class="outline-2">
+<h2 id="orgaaca857">Log</h2>
+<div class="outline-text-2" id="text-orgaaca857">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -170,25 +175,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgee51b92" class="outline-2">
-<h2 id="orgee51b92">Push</h2>
-<div class="outline-text-2" id="text-orgee51b92">
+<div id="outline-container-org14e6e61" class="outline-2">
+<h2 id="org14e6e61">Push</h2>
+<div class="outline-text-2" id="text-org14e6e61">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgef93765" class="outline-2">
-<h2 id="orgef93765">Pull</h2>
-<div class="outline-text-2" id="text-orgef93765">
+<div id="outline-container-org27b03ac" class="outline-2">
+<h2 id="org27b03ac">Pull</h2>
+<div class="outline-text-2" id="text-org27b03ac">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf0d5146" class="outline-2">
-<h2 id="orgf0d5146">Branch</h2>
-<div class="outline-text-2" id="text-orgf0d5146">
+<div id="outline-container-orgddfc2f4" class="outline-2">
+<h2 id="orgddfc2f4">Branch</h2>
+<div class="outline-text-2" id="text-orgddfc2f4">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -196,26 +201,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-org784ed4e" class="outline-2">
-<h2 id="org784ed4e">Reset or Revert</h2>
-<div class="outline-text-2" id="text-org784ed4e">
+<div id="outline-container-orgac8ddb6" class="outline-2">
+<h2 id="orgac8ddb6">Reset or Revert</h2>
+<div class="outline-text-2" id="text-orgac8ddb6">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-org526583e" class="outline-2">
-<h2 id="org526583e">기타</h2>
-<div class="outline-text-2" id="text-org526583e">
+<div id="outline-container-org5ffba2d" class="outline-2">
+<h2 id="org5ffba2d">기타</h2>
+<div class="outline-text-2" id="text-org5ffba2d">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9422382" class="outline-2">
-<h2 id="org9422382">외부 링크</h2>
-<div class="outline-text-2" id="text-org9422382">
+<div id="outline-container-orge852c0d" class="outline-2">
+<h2 id="orge852c0d">외부 링크</h2>
+<div class="outline-text-2" id="text-orge852c0d">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
@@ -246,9 +251,13 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </script>
 </div>
 </div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
