--- a/note/motion.html
+++ b/note/motion.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,15 +76,15 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4258868">단축키</a></li>
-<li><a href="#orgddcfbf3">팁</a>
+<li><a href="#orgbeb45fd">단축키</a></li>
+<li><a href="#orgdfaee2b">팁</a>
 <ul>
-<li><a href="#org550584d">효과 적용 시간 보장하기</a></li>
+<li><a href="#org7d57cd8">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#org3a95dd2">기타</a>
+<li><a href="#orgb46d92b">기타</a>
 <ul>
-<li><a href="#orga6594fc">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#org16ab20e">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -95,9 +100,9 @@ gtag('config', 'UA-44534026-1');
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-org4258868" class="outline-2">
-<h2 id="org4258868">단축키</h2>
-<div class="outline-text-2" id="text-org4258868">
+<div id="outline-container-orgbeb45fd" class="outline-2">
+<h2 id="orgbeb45fd">단축키</h2>
+<div class="outline-text-2" id="text-orgbeb45fd">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -105,13 +110,13 @@ gtag('config', 'UA-44534026-1');
 </dl>
 </div>
 </div>
-<div id="outline-container-orgddcfbf3" class="outline-2">
-<h2 id="orgddcfbf3">팁</h2>
-<div class="outline-text-2" id="text-orgddcfbf3">
+<div id="outline-container-orgdfaee2b" class="outline-2">
+<h2 id="orgdfaee2b">팁</h2>
+<div class="outline-text-2" id="text-orgdfaee2b">
 </div>
-<div id="outline-container-org550584d" class="outline-3">
-<h3 id="org550584d">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-org550584d">
+<div id="outline-container-org7d57cd8" class="outline-3">
+<h3 id="org7d57cd8">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-org7d57cd8">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -129,13 +134,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org3a95dd2" class="outline-2">
-<h2 id="org3a95dd2">기타</h2>
-<div class="outline-text-2" id="text-org3a95dd2">
+<div id="outline-container-orgb46d92b" class="outline-2">
+<h2 id="orgb46d92b">기타</h2>
+<div class="outline-text-2" id="text-orgb46d92b">
 </div>
-<div id="outline-container-orga6594fc" class="outline-3">
-<h3 id="orga6594fc">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-orga6594fc">
+<div id="outline-container-org16ab20e" class="outline-3">
+<h3 id="org16ab20e">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-org16ab20e">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -156,6 +161,16 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<hr /><div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
+<div class="article-link-date">
+2020년 4월 23일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
@@ -169,19 +184,13 @@ gtag('config', 'UA-44534026-1');
 </script>
 </div>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/fcpx.html">Final Cut Pro X</a></h2>
-<div class="article-link-date">
-2020년 4월 23일 수정</div>
-</div>
-</div>
-</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
