--- a/note/object.html
+++ b/note/object.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,16 +76,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org5d7fcab">사전적 의미</a></li>
-<li><a href="#org2b1d53c">컴퓨터 프로그래밍 개념 1</a></li>
-<li><a href="#orgad47ed5">컴퓨터 프로그래밍 개념 2</a></li>
+<li><a href="#org201e9fc">사전적 의미</a></li>
+<li><a href="#org0d58b2b">컴퓨터 프로그래밍 개념 1</a></li>
+<li><a href="#orgd9e079d">컴퓨터 프로그래밍 개념 2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org5d7fcab" class="outline-2">
-<h2 id="org5d7fcab">사전적 의미</h2>
-<div class="outline-text-2" id="text-org5d7fcab">
+<div id="outline-container-org201e9fc" class="outline-2">
+<h2 id="org201e9fc">사전적 의미</h2>
+<div class="outline-text-2" id="text-org201e9fc">
 <blockquote>
 <p>
 물건, 물체
@@ -91,9 +96,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org2b1d53c" class="outline-2">
-<h2 id="org2b1d53c">컴퓨터 프로그래밍 개념 1</h2>
-<div class="outline-text-2" id="text-org2b1d53c">
+<div id="outline-container-org0d58b2b" class="outline-2">
+<h2 id="org0d58b2b">컴퓨터 프로그래밍 개념 1</h2>
+<div class="outline-text-2" id="text-org0d58b2b">
 <p>
 오브젝트(Object, 객체)는 OOP(Object Orient Programming, 객체 지향 프로그래밍)에서
 클래스(Class)를 실체화 시킨 <a href="instance.html">인스턴스</a>를 특별히 부르는 이름이다.
@@ -104,9 +109,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgad47ed5" class="outline-2">
-<h2 id="orgad47ed5">컴퓨터 프로그래밍 개념 2</h2>
-<div class="outline-text-2" id="text-orgad47ed5">
+<div id="outline-container-orgd9e079d" class="outline-2">
+<h2 id="orgd9e079d">컴퓨터 프로그래밍 개념 2</h2>
+<div class="outline-text-2" id="text-orgd9e079d">
 <p>
 C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브젝트 파일이라고 부른다.
 실제로 확장자가 <code>.o</code> 이다.
@@ -125,6 +130,16 @@ C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<hr /><div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/definition.html">정의</a></h2>
+<div class="article-link-date">
+2020년 4월 26일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
@@ -138,19 +153,13 @@ C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브
 </script>
 </div>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/definition.html">정의</a></h2>
-<div class="article-link-date">
-2020년 4월 26일 수정</div>
-</div>
-</div>
-</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
