--- a/note/seorenn.html
+++ b/note/seorenn.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -95,9 +100,9 @@ Java와 C++은 아주 혐오하는 것 같다.
 기타 고전 건축이나 기둥에 흥분하는 변태 같다.
 </p>
 
-<div id="outline-container-org005f8af" class="outline-2">
-<h2 id="org005f8af">외부 링크</h2>
-<div class="outline-text-2" id="text-org005f8af">
+<div id="outline-container-org29cc189" class="outline-2">
+<h2 id="org29cc189">외부 링크</h2>
+<div class="outline-text-2" id="text-org29cc189">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
 <li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
@@ -133,9 +138,13 @@ Java와 C++은 아주 혐오하는 것 같다.
 </script>
 </div>
 </div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
