--- a/note/sh.html
+++ b/note/sh.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,27 +76,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org95442c6">소개</a></li>
-<li><a href="#orgde6246b">스크립팅 노트</a>
+<li><a href="#org9e52da2">소개</a></li>
+<li><a href="#orgded3f07">스크립팅 노트</a>
 <ul>
-<li><a href="#orgf9e01e4">실행 가능한 스크립트</a></li>
-<li><a href="#org7eb6983">if</a></li>
-<li><a href="#org115d070">루프</a></li>
-<li><a href="#org70e9865">조건식 오퍼레이터</a></li>
-<li><a href="#org9402c94">디렉토리 존재 유무 체크</a></li>
-<li><a href="#org2234c1d">파일 개수</a></li>
-<li><a href="#orgdefe2ea">와일드카드 인자 처리</a></li>
-<li><a href="#orge232bcb">에러가 나면 멈추게 하기</a></li>
-<li><a href="#org5bb698d">에러 메시지 숨기기</a></li>
+<li><a href="#orgc582ed4">실행 가능한 스크립트</a></li>
+<li><a href="#orgb3cc929">if</a></li>
+<li><a href="#org1a94628">루프</a></li>
+<li><a href="#orge82810c">조건식 오퍼레이터</a></li>
+<li><a href="#org27950d3">디렉토리 존재 유무 체크</a></li>
+<li><a href="#orgcffc007">파일 개수</a></li>
+<li><a href="#orgbaf7aab">와일드카드 인자 처리</a></li>
+<li><a href="#org7341481">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org1ab97f9">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org95442c6" class="outline-2">
-<h2 id="org95442c6">소개</h2>
-<div class="outline-text-2" id="text-org95442c6">
+<div id="outline-container-org9e52da2" class="outline-2">
+<h2 id="org9e52da2">소개</h2>
+<div class="outline-text-2" id="text-org9e52da2">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -100,16 +105,16 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgde6246b" class="outline-2">
-<h2 id="orgde6246b">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-orgde6246b">
+<div id="outline-container-orgded3f07" class="outline-2">
+<h2 id="orgded3f07">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-orgded3f07">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-orgf9e01e4" class="outline-3">
-<h3 id="orgf9e01e4">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-orgf9e01e4">
+<div id="outline-container-orgc582ed4" class="outline-3">
+<h3 id="orgc582ed4">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-orgc582ed4">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -170,9 +175,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org7eb6983" class="outline-3">
-<h3 id="org7eb6983">if</h3>
-<div class="outline-text-3" id="text-org7eb6983">
+<div id="outline-container-orgb3cc929" class="outline-3">
+<h3 id="orgb3cc929">if</h3>
+<div class="outline-text-3" id="text-orgb3cc929">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -211,9 +216,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org115d070" class="outline-3">
-<h3 id="org115d070">루프</h3>
-<div class="outline-text-3" id="text-org115d070">
+<div id="outline-container-org1a94628" class="outline-3">
+<h3 id="org1a94628">루프</h3>
+<div class="outline-text-3" id="text-org1a94628">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -230,9 +235,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org70e9865" class="outline-3">
-<h3 id="org70e9865">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org70e9865">
+<div id="outline-container-orge82810c" class="outline-3">
+<h3 id="orge82810c">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orge82810c">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -247,9 +252,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9402c94" class="outline-3">
-<h3 id="org9402c94">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-org9402c94">
+<div id="outline-container-org27950d3" class="outline-3">
+<h3 id="org27950d3">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-org27950d3">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -264,9 +269,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org2234c1d" class="outline-3">
-<h3 id="org2234c1d">파일 개수</h3>
-<div class="outline-text-3" id="text-org2234c1d">
+<div id="outline-container-orgcffc007" class="outline-3">
+<h3 id="orgcffc007">파일 개수</h3>
+<div class="outline-text-3" id="text-orgcffc007">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -290,9 +295,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgdefe2ea" class="outline-3">
-<h3 id="orgdefe2ea">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-orgdefe2ea">
+<div id="outline-container-orgbaf7aab" class="outline-3">
+<h3 id="orgbaf7aab">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-orgbaf7aab">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -310,9 +315,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orge232bcb" class="outline-3">
-<h3 id="orge232bcb">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-orge232bcb">
+<div id="outline-container-org7341481" class="outline-3">
+<h3 id="org7341481">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-org7341481">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -322,9 +327,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org5bb698d" class="outline-3">
-<h3 id="org5bb698d">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-org5bb698d">
+<div id="outline-container-org1ab97f9" class="outline-3">
+<h3 id="org1ab97f9">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org1ab97f9">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
@@ -346,6 +351,16 @@ than, greater than or equal, less than, less than or equal</li>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<hr /><div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/shell.html">셸</a></h2>
+<div class="article-link-date">
+2020년 4월 13일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
@@ -359,19 +374,13 @@ than, greater than or equal, less than, less than or equal</li>
 </script>
 </div>
 </div>
-<hr /><div class="backlinks-container">
-<h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/shell.html">셸</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
-</div>
-</div>
-</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
