--- a/note/grep.html
+++ b/note/grep.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,16 +76,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6fe0499">기본 사용법</a></li>
-<li><a href="#org8c13e41">대소문자 무시</a></li>
-<li><a href="#org45bbb26">바이너리(Binary) 파일 무시하기</a></li>
-<li><a href="#org3d933bf">재귀(Recursive) 검색</a></li>
-<li><a href="#orgb963d85">검색된 파일 이름만 보기</a></li>
-<li><a href="#org5f8b887">단어만 검색하기</a></li>
-<li><a href="#orgba50f3e">줄 번호(Line Number) 보기</a></li>
-<li><a href="#orgd1315a4">발견 개수 보기</a></li>
-<li><a href="#org4479598">검색되지 않는 것만 보기</a></li>
-<li><a href="#org8e818a6">정규표현식</a></li>
+<li><a href="#orgddbe169">기본 사용법</a></li>
+<li><a href="#org315798b">대소문자 무시</a></li>
+<li><a href="#org7534c26">바이너리(Binary) 파일 무시하기</a></li>
+<li><a href="#orgb4316e9">재귀(Recursive) 검색</a></li>
+<li><a href="#org96ed076">검색된 파일 이름만 보기</a></li>
+<li><a href="#orga6a5827">단어만 검색하기</a></li>
+<li><a href="#org0bd64d7">줄 번호(Line Number) 보기</a></li>
+<li><a href="#org14691d0">발견 개수 보기</a></li>
+<li><a href="#orgc487d72">검색되지 않는 것만 보기</a></li>
+<li><a href="#orgda08be9">정규표현식</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +93,9 @@ gtag('config', 'UA-44534026-1');
 Grep은 파일이나 텍스트에서 특정 텍스트를 검색하는 데 사용되는 *NIX <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org6fe0499" class="outline-2">
-<h2 id="org6fe0499">기본 사용법</h2>
-<div class="outline-text-2" id="text-org6fe0499">
+<div id="outline-container-orgddbe169" class="outline-2">
+<h2 id="orgddbe169">기본 사용법</h2>
+<div class="outline-text-2" id="text-orgddbe169">
 <p>
 기본적으로는 텍스트 파일에서 문자열을 검색하는 것을 생각할 수 있다.
 </p>
@@ -117,9 +122,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org8c13e41" class="outline-2">
-<h2 id="org8c13e41">대소문자 무시</h2>
-<div class="outline-text-2" id="text-org8c13e41">
+<div id="outline-container-org315798b" class="outline-2">
+<h2 id="org315798b">대소문자 무시</h2>
+<div class="outline-text-2" id="text-org315798b">
 <p>
 <code>-i</code> 옵션을 사용하면 대소문자를 가리지 않고 검색한다.
 </p>
@@ -129,9 +134,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org45bbb26" class="outline-2">
-<h2 id="org45bbb26">바이너리(Binary) 파일 무시하기</h2>
-<div class="outline-text-2" id="text-org45bbb26">
+<div id="outline-container-org7534c26" class="outline-2">
+<h2 id="org7534c26">바이너리(Binary) 파일 무시하기</h2>
+<div class="outline-text-2" id="text-org7534c26">
 <p>
 가끔 이진 파일에서 검색하느라 느려지거나 이상한 것을 검색하기도 하는데, 이를 때는 <code>-I</code> 옵션을 사용할 수 있다.
 </p>
@@ -141,9 +146,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org3d933bf" class="outline-2">
-<h2 id="org3d933bf">재귀(Recursive) 검색</h2>
-<div class="outline-text-2" id="text-org3d933bf">
+<div id="outline-container-orgb4316e9" class="outline-2">
+<h2 id="orgb4316e9">재귀(Recursive) 검색</h2>
+<div class="outline-text-2" id="text-orgb4316e9">
 <p>
 재귀 검색이란 하위 디렉터리를 모두 다 뒤져본다는 의미다.
 </p>
@@ -169,9 +174,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgb963d85" class="outline-2">
-<h2 id="orgb963d85">검색된 파일 이름만 보기</h2>
-<div class="outline-text-2" id="text-orgb963d85">
+<div id="outline-container-org96ed076" class="outline-2">
+<h2 id="org96ed076">검색된 파일 이름만 보기</h2>
+<div class="outline-text-2" id="text-org96ed076">
 <p>
 <code>-l</code> 옵션은 발견된 패턴을 화면에 표시하지 않게 한다.
 </p>
@@ -186,9 +191,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org5f8b887" class="outline-2">
-<h2 id="org5f8b887">단어만 검색하기</h2>
-<div class="outline-text-2" id="text-org5f8b887">
+<div id="outline-container-orga6a5827" class="outline-2">
+<h2 id="orga6a5827">단어만 검색하기</h2>
+<div class="outline-text-2" id="text-orga6a5827">
 <p>
 단어 단위 검색을 하기 위해서 <code>-w</code> 옵션을 사용할 수 있다.
 </p>
@@ -201,9 +206,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgba50f3e" class="outline-2">
-<h2 id="orgba50f3e">줄 번호(Line Number) 보기</h2>
-<div class="outline-text-2" id="text-orgba50f3e">
+<div id="outline-container-org0bd64d7" class="outline-2">
+<h2 id="org0bd64d7">줄 번호(Line Number) 보기</h2>
+<div class="outline-text-2" id="text-org0bd64d7">
 <p>
 <code>-n</code> 옵션을 이용해 줄 번호를 표시할 수 있다.
 </p>
@@ -216,9 +221,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgd1315a4" class="outline-2">
-<h2 id="orgd1315a4">발견 개수 보기</h2>
-<div class="outline-text-2" id="text-orgd1315a4">
+<div id="outline-container-org14691d0" class="outline-2">
+<h2 id="org14691d0">발견 개수 보기</h2>
+<div class="outline-text-2" id="text-org14691d0">
 <p>
 <code>-c</code> 옵션을 주면 발견된 개수(count)를 구할 수 있다.
 </p>
@@ -231,9 +236,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org4479598" class="outline-2">
-<h2 id="org4479598">검색되지 않는 것만 보기</h2>
-<div class="outline-text-2" id="text-org4479598">
+<div id="outline-container-orgc487d72" class="outline-2">
+<h2 id="orgc487d72">검색되지 않는 것만 보기</h2>
+<div class="outline-text-2" id="text-orgc487d72">
 <p>
 <code>-v</code> 옵션을 주면 검색되지 않는 라인을 화면에 표시한다.
 </p>
@@ -246,9 +251,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org8e818a6" class="outline-2">
-<h2 id="org8e818a6">정규표현식</h2>
-<div class="outline-text-2" id="text-org8e818a6">
+<div id="outline-container-orgda08be9" class="outline-2">
+<h2 id="orgda08be9">정규표현식</h2>
+<div class="outline-text-2" id="text-orgda08be9">
 <p>
 원래 정규표현식이 지원되지 때문에 그냥 써도 된다.
 </p>
@@ -292,9 +297,13 @@ this is sample
 </script>
 </div>
 </div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
