--- a/note/instance.html
+++ b/note/instance.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,32 +76,32 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbef228d">프로세스 개념</a></li>
-<li><a href="#org17e96d4">특정 서비스의 용어</a></li>
-<li><a href="#org4c518d0">컴퓨터 프로그래밍 개념</a></li>
+<li><a href="#orgdf11576">프로세스 개념</a></li>
+<li><a href="#org8bc1951">특정 서비스의 용어</a></li>
+<li><a href="#org560f065">컴퓨터 프로그래밍 개념</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgbef228d" class="outline-2">
-<h2 id="orgbef228d">프로세스 개념</h2>
-<div class="outline-text-2" id="text-orgbef228d">
+<div id="outline-container-orgdf11576" class="outline-2">
+<h2 id="orgdf11576">프로세스 개념</h2>
+<div class="outline-text-2" id="text-orgdf11576">
 <p>
 실행 중인 임의의 프로세스를 인스턴스라고 부르기도 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org17e96d4" class="outline-2">
-<h2 id="org17e96d4">특정 서비스의 용어</h2>
-<div class="outline-text-2" id="text-org17e96d4">
+<div id="outline-container-org8bc1951" class="outline-2">
+<h2 id="org8bc1951">특정 서비스의 용어</h2>
+<div class="outline-text-2" id="text-org8bc1951">
 <p>
 예를 들어 AWS의 EC2 서비스의 경우 각각의 가상 서버를 EC2 인스턴스라고 부른다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4c518d0" class="outline-2">
-<h2 id="org4c518d0">컴퓨터 프로그래밍 개념</h2>
-<div class="outline-text-2" id="text-org4c518d0">
+<div id="outline-container-org560f065" class="outline-2">
+<h2 id="org560f065">컴퓨터 프로그래밍 개념</h2>
+<div class="outline-text-2" id="text-org560f065">
 <p>
 <a href="definition.html">정의</a>를 실체화(?) 시킨 것을 인스턴스라고 부른다.
 </p>
@@ -149,19 +154,6 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</section>
-<div class="side-ad-container">
-<ins class="adsbygoogle side-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
-</div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
@@ -193,9 +185,26 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
+</section>
+<div class="side-ad-container">
+<ins class="adsbygoogle side-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
