--- a/note/javascript.html
+++ b/note/javascript.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,22 +76,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org770569d">노트</a>
+<li><a href="#orgf7c346d">노트</a>
 <ul>
-<li><a href="#org1a637c8">모듈(Module)</a></li>
-<li><a href="#org5217880">스프레드(Spreads) 연산자</a></li>
-<li><a href="#orge7e0c8c">튜플 비슷한 문법</a></li>
+<li><a href="#org082e4ee">모듈(Module)</a></li>
+<li><a href="#org76376c3">스프레드(Spreads) 연산자</a></li>
+<li><a href="#orgc43f628">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#org0b78910">실전(?) 메모</a>
+<li><a href="#org1cb539a">실전(?) 메모</a>
 <ul>
-<li><a href="#orgc18281e">요소 얻기</a></li>
-<li><a href="#org5763142">특정 블록에 HTML 넣기</a></li>
-<li><a href="#orgbc5ce77">콘텐츠 높이 구하기</a></li>
-<li><a href="#org6a5d28a">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#orgdc23d88">요소 얻기</a></li>
+<li><a href="#org453dc15">특정 블록에 HTML 넣기</a></li>
+<li><a href="#org1f70b2c">콘텐츠 높이 구하기</a></li>
+<li><a href="#orga23b55a">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
-<li><a href="#orgd561061">외부 링크</a></li>
+<li><a href="#orgbe23ed3">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -104,13 +109,13 @@ gtag('config', 'UA-44534026-1');
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-org770569d" class="outline-2">
-<h2 id="org770569d">노트</h2>
-<div class="outline-text-2" id="text-org770569d">
+<div id="outline-container-orgf7c346d" class="outline-2">
+<h2 id="orgf7c346d">노트</h2>
+<div class="outline-text-2" id="text-orgf7c346d">
 </div>
-<div id="outline-container-org1a637c8" class="outline-3">
-<h3 id="org1a637c8">모듈(Module)</h3>
-<div class="outline-text-3" id="text-org1a637c8">
+<div id="outline-container-org082e4ee" class="outline-3">
+<h3 id="org082e4ee">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org082e4ee">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -162,9 +167,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org5217880" class="outline-3">
-<h3 id="org5217880">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org5217880">
+<div id="outline-container-org76376c3" class="outline-3">
+<h3 id="org76376c3">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org76376c3">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -227,9 +232,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge7e0c8c" class="outline-3">
-<h3 id="orge7e0c8c">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-orge7e0c8c">
+<div id="outline-container-orgc43f628" class="outline-3">
+<h3 id="orgc43f628">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-orgc43f628">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -241,13 +246,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-org0b78910" class="outline-2">
-<h2 id="org0b78910">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-org0b78910">
+<div id="outline-container-org1cb539a" class="outline-2">
+<h2 id="org1cb539a">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org1cb539a">
 </div>
-<div id="outline-container-orgc18281e" class="outline-3">
-<h3 id="orgc18281e">요소 얻기</h3>
-<div class="outline-text-3" id="text-orgc18281e">
+<div id="outline-container-orgdc23d88" class="outline-3">
+<h3 id="orgdc23d88">요소 얻기</h3>
+<div class="outline-text-3" id="text-orgdc23d88">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -259,9 +264,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org5763142" class="outline-3">
-<h3 id="org5763142">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-org5763142">
+<div id="outline-container-org453dc15" class="outline-3">
+<h3 id="org453dc15">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-org453dc15">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -271,9 +276,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-orgbc5ce77" class="outline-3">
-<h3 id="orgbc5ce77">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-orgbc5ce77">
+<div id="outline-container-org1f70b2c" class="outline-3">
+<h3 id="org1f70b2c">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-org1f70b2c">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -293,9 +298,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org6a5d28a" class="outline-3">
-<h3 id="org6a5d28a">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-org6a5d28a">
+<div id="outline-container-orga23b55a" class="outline-3">
+<h3 id="orga23b55a">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-orga23b55a">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -322,9 +327,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 </div>
-<div id="outline-container-orgd561061" class="outline-2">
-<h2 id="orgd561061">외부 링크</h2>
-<div class="outline-text-2" id="text-orgd561061">
+<div id="outline-container-orgbe23ed3" class="outline-2">
+<h2 id="orgbe23ed3">외부 링크</h2>
+<div class="outline-text-2" id="text-orgbe23ed3">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
@@ -355,9 +360,13 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </script>
 </div>
 </div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
