--- a/note/mongodb.html
+++ b/note/mongodb.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,44 +76,44 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc1a137d">CLI 사용법 메모</a>
+<li><a href="#orgb8b2bb2">CLI 사용법 메모</a>
 <ul>
-<li><a href="#org579ad5e">연결하기(Connect)</a></li>
-<li><a href="#org2550676">데이터베이스 선택(Select Database)</a></li>
-<li><a href="#org8a2545e">데이터베이스 목록 보기(List Databases)</a></li>
-<li><a href="#orgf1f3531">컬렉션 조회(List Collections)</a></li>
-<li><a href="#orgcd05b70">삽입(Insert)</a></li>
-<li><a href="#org82bd242">조회(Find or Query)</a></li>
-<li><a href="#orgf997d1a">수정(Update)</a></li>
-<li><a href="#org82093c0">삭제(Remove)</a></li>
+<li><a href="#orga9bd906">연결하기(Connect)</a></li>
+<li><a href="#orge705d31">데이터베이스 선택(Select Database)</a></li>
+<li><a href="#org4ca0f6e">데이터베이스 목록 보기(List Databases)</a></li>
+<li><a href="#orgf7ed8be">컬렉션 조회(List Collections)</a></li>
+<li><a href="#orgf39204c">삽입(Insert)</a></li>
+<li><a href="#org94b7a48">조회(Find or Query)</a></li>
+<li><a href="#org11f7111">수정(Update)</a></li>
+<li><a href="#orgb5e914f">삭제(Remove)</a></li>
 </ul>
 </li>
-<li><a href="#org88805a8">조회법 메모</a>
+<li><a href="#org3709a70">조회법 메모</a>
 <ul>
-<li><a href="#orgae6097c">정렬, 위치, 갯수 제한</a></li>
-<li><a href="#orga0042d2">수치 비교</a></li>
-<li><a href="#orgc47bdc6">특정 필드 표시하지 않기</a></li>
-<li><a href="#orgda73119">특정 필드가 있는 도큐먼트 검색하기</a></li>
-<li><a href="#orgfd26f42">Not Null???</a></li>
+<li><a href="#org20250ce">정렬, 위치, 갯수 제한</a></li>
+<li><a href="#orgbe4e0a8">수치 비교</a></li>
+<li><a href="#org340a263">특정 필드 표시하지 않기</a></li>
+<li><a href="#org98ba17f">특정 필드가 있는 도큐먼트 검색하기</a></li>
+<li><a href="#org7e3fa6c">Not Null???</a></li>
 </ul>
 </li>
-<li><a href="#org2dcb043">어그리게이트(Aggregate)</a>
+<li><a href="#orged2bc47">어그리게이트(Aggregate)</a>
 <ul>
-<li><a href="#org0a6c2c4">기초</a></li>
-<li><a href="#orgfd106af">예제</a></li>
-<li><a href="#org64d1953">몇 가지 유용한 파이프라인 오퍼레이터</a></li>
+<li><a href="#org8c66bee">기초</a></li>
+<li><a href="#orga7b682c">예제</a></li>
+<li><a href="#orgc5dcba2">몇 가지 유용한 파이프라인 오퍼레이터</a></li>
 </ul>
 </li>
-<li><a href="#org91bcc37">백업 및 복원(Dump and Restore)</a>
+<li><a href="#orge5f4ee8">백업 및 복원(Dump and Restore)</a>
 <ul>
-<li><a href="#org02121f0">백업(Dump)</a></li>
-<li><a href="#orgf4d62a0">복원(Restore)</a></li>
+<li><a href="#org659e071">백업(Dump)</a></li>
+<li><a href="#orgfa4e282">복원(Restore)</a></li>
 </ul>
 </li>
-<li><a href="#orgfb1151b">기타</a>
+<li><a href="#org7babfa0">기타</a>
 <ul>
-<li><a href="#org4551166">컬렉션 몽땅 비우기(지우기)</a></li>
-<li><a href="#org3391875">Replica Set 에서 Primary 바꾸기</a></li>
+<li><a href="#orgb316472">컬렉션 몽땅 비우기(지우기)</a></li>
+<li><a href="#orga125b18">Replica Set 에서 Primary 바꾸기</a></li>
 </ul>
 </li>
 </ul>
@@ -121,13 +126,13 @@ MongoDB 는 이름처럼 Database 시스템이다.
 이로 인해 NoSQL DB 의 대명사이기도 하다.
 </p>
 
-<div id="outline-container-orgc1a137d" class="outline-2">
-<h2 id="orgc1a137d"><a href="cli.html">CLI</a> 사용법 메모</h2>
-<div class="outline-text-2" id="text-orgc1a137d">
+<div id="outline-container-orgb8b2bb2" class="outline-2">
+<h2 id="orgb8b2bb2"><a href="cli.html">CLI</a> 사용법 메모</h2>
+<div class="outline-text-2" id="text-orgb8b2bb2">
 </div>
-<div id="outline-container-org579ad5e" class="outline-3">
-<h3 id="org579ad5e">연결하기(Connect)</h3>
-<div class="outline-text-3" id="text-org579ad5e">
+<div id="outline-container-orga9bd906" class="outline-3">
+<h3 id="orga9bd906">연결하기(Connect)</h3>
+<div class="outline-text-3" id="text-orga9bd906">
 <div class="org-src-container">
 <pre class="src src-bash">mongo --host foo.bar --port <span style="color: #da8548; font-weight: bold;">27017</span>
 </pre>
@@ -148,18 +153,18 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2550676" class="outline-3">
-<h3 id="org2550676">데이터베이스 선택(Select Database)</h3>
-<div class="outline-text-3" id="text-org2550676">
+<div id="outline-container-orge705d31" class="outline-3">
+<h3 id="orge705d31">데이터베이스 선택(Select Database)</h3>
+<div class="outline-text-3" id="text-orge705d31">
 <div class="org-src-container">
 <pre class="src src-javascript">use dbname
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org8a2545e" class="outline-3">
-<h3 id="org8a2545e">데이터베이스 목록 보기(List Databases)</h3>
-<div class="outline-text-3" id="text-org8a2545e">
+<div id="outline-container-org4ca0f6e" class="outline-3">
+<h3 id="org4ca0f6e">데이터베이스 목록 보기(List Databases)</h3>
+<div class="outline-text-3" id="text-org4ca0f6e">
 <div class="org-src-container">
 <pre class="src src-javascript">db.adminCommand({listDatabases: <span style="color: #da8548; font-weight: bold;">1</span>})
 </pre>
@@ -170,27 +175,27 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf1f3531" class="outline-3">
-<h3 id="orgf1f3531">컬렉션 조회(List Collections)</h3>
-<div class="outline-text-3" id="text-orgf1f3531">
+<div id="outline-container-orgf7ed8be" class="outline-3">
+<h3 id="orgf7ed8be">컬렉션 조회(List Collections)</h3>
+<div class="outline-text-3" id="text-orgf7ed8be">
 <div class="org-src-container">
 <pre class="src src-javascript">show collections
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgcd05b70" class="outline-3">
-<h3 id="orgcd05b70">삽입(Insert)</h3>
-<div class="outline-text-3" id="text-orgcd05b70">
+<div id="outline-container-orgf39204c" class="outline-3">
+<h3 id="orgf39204c">삽입(Insert)</h3>
+<div class="outline-text-3" id="text-orgf39204c">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.insert({key: value, ...})
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org82bd242" class="outline-3">
-<h3 id="org82bd242">조회(Find or Query)</h3>
-<div class="outline-text-3" id="text-org82bd242">
+<div id="outline-container-org94b7a48" class="outline-3">
+<h3 id="org94b7a48">조회(Find or Query)</h3>
+<div class="outline-text-3" id="text-org94b7a48">
 <div class="org-src-container">
 <pre class="src src-javascript">db.colllection.find({key: value, ...})
 </pre>
@@ -200,9 +205,9 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf997d1a" class="outline-3">
-<h3 id="orgf997d1a">수정(Update)</h3>
-<div class="outline-text-3" id="text-orgf997d1a">
+<div id="outline-container-org11f7111" class="outline-3">
+<h3 id="org11f7111">수정(Update)</h3>
+<div class="outline-text-3" id="text-org11f7111">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.update({key: value, ...}, {$set: {key: value, ...}})
 </pre>
@@ -220,9 +225,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </p>
 </div>
 </div>
-<div id="outline-container-org82093c0" class="outline-3">
-<h3 id="org82093c0">삭제(Remove)</h3>
-<div class="outline-text-3" id="text-org82093c0">
+<div id="outline-container-orgb5e914f" class="outline-3">
+<h3 id="orgb5e914f">삭제(Remove)</h3>
+<div class="outline-text-3" id="text-orgb5e914f">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.remove({key: value, ...})
 </pre>
@@ -233,13 +238,13 @@ find 에서 쓰는 쿼리와 동일하다.
 </div>
 </div>
 </div>
-<div id="outline-container-org88805a8" class="outline-2">
-<h2 id="org88805a8">조회법 메모</h2>
-<div class="outline-text-2" id="text-org88805a8">
+<div id="outline-container-org3709a70" class="outline-2">
+<h2 id="org3709a70">조회법 메모</h2>
+<div class="outline-text-2" id="text-org3709a70">
 </div>
-<div id="outline-container-orgae6097c" class="outline-3">
-<h3 id="orgae6097c">정렬, 위치, 갯수 제한</h3>
-<div class="outline-text-3" id="text-orgae6097c">
+<div id="outline-container-org20250ce" class="outline-3">
+<h3 id="org20250ce">정렬, 위치, 갯수 제한</h3>
+<div class="outline-text-3" id="text-org20250ce">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: value, ...})
              .sort({field: -<span style="color: #da8548; font-weight: bold;">1</span>})
@@ -252,9 +257,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga0042d2" class="outline-3">
-<h3 id="orga0042d2">수치 비교</h3>
-<div class="outline-text-3" id="text-orga0042d2">
+<div id="outline-container-orgbe4e0a8" class="outline-3">
+<h3 id="orgbe4e0a8">수치 비교</h3>
+<div class="outline-text-3" id="text-orgbe4e0a8">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$gt: <span style="color: #da8548; font-weight: bold;">10</span>}})
 </pre>
@@ -267,9 +272,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgc47bdc6" class="outline-3">
-<h3 id="orgc47bdc6">특정 필드 표시하지 않기</h3>
-<div class="outline-text-3" id="text-orgc47bdc6">
+<div id="outline-container-org340a263" class="outline-3">
+<h3 id="org340a263">특정 필드 표시하지 않기</h3>
+<div class="outline-text-3" id="text-org340a263">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: value, ...},
                    {keyToHide: <span style="color: #da8548; font-weight: bold;">0</span>})
@@ -281,9 +286,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-orgda73119" class="outline-3">
-<h3 id="orgda73119">특정 필드가 있는 도큐먼트 검색하기</h3>
-<div class="outline-text-3" id="text-orgda73119">
+<div id="outline-container-org98ba17f" class="outline-3">
+<h3 id="org98ba17f">특정 필드가 있는 도큐먼트 검색하기</h3>
+<div class="outline-text-3" id="text-org98ba17f">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$exists: <span style="color: #a9a1e1;">true</span>}})
 </pre>
@@ -293,9 +298,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-orgfd26f42" class="outline-3">
-<h3 id="orgfd26f42">Not Null???</h3>
-<div class="outline-text-3" id="text-orgfd26f42">
+<div id="outline-container-org7e3fa6c" class="outline-3">
+<h3 id="org7e3fa6c">Not Null???</h3>
+<div class="outline-text-3" id="text-org7e3fa6c">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$ne: <span style="color: #a9a1e1;">null</span>}})
 </pre>
@@ -306,9 +311,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </div>
 </div>
 </div>
-<div id="outline-container-org2dcb043" class="outline-2">
-<h2 id="org2dcb043">어그리게이트(Aggregate)</h2>
-<div class="outline-text-2" id="text-org2dcb043">
+<div id="outline-container-orged2bc47" class="outline-2">
+<h2 id="orged2bc47">어그리게이트(Aggregate)</h2>
+<div class="outline-text-2" id="text-orged2bc47">
 <p>
 어그리게이트는 도큐먼트를 파이프 라인을 통해
 여러 차례에 걸쳐서 처리할 수 있도록 하는 특수한 기능이다.
@@ -316,9 +321,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 이걸 결과로 넘기는 식이 일렬로 처리되는 것과 비슷하다.
 </p>
 </div>
-<div id="outline-container-org0a6c2c4" class="outline-3">
-<h3 id="org0a6c2c4">기초</h3>
-<div class="outline-text-3" id="text-org0a6c2c4">
+<div id="outline-container-org8c66bee" class="outline-3">
+<h3 id="org8c66bee">기초</h3>
+<div class="outline-text-3" id="text-org8c66bee">
 <p>
 어그리게이트의 기본 문법은 아래와 같다.
 </p>
@@ -333,9 +338,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-orgfd106af" class="outline-3">
-<h3 id="orgfd106af">예제</h3>
-<div class="outline-text-3" id="text-orgfd106af">
+<div id="outline-container-orga7b682c" class="outline-3">
+<h3 id="orga7b682c">예제</h3>
+<div class="outline-text-3" id="text-orga7b682c">
 <div class="org-src-container">
 <pre class="src src-text">db.user.aggregate([
     {$match:
@@ -368,9 +373,9 @@ user라는 컬렉션에서 2000년 이후로 가입한 사람들만 간추려서
 </p>
 </div>
 </div>
-<div id="outline-container-org64d1953" class="outline-3">
-<h3 id="org64d1953">몇 가지 유용한 파이프라인 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org64d1953">
+<div id="outline-container-orgc5dcba2" class="outline-3">
+<h3 id="orgc5dcba2">몇 가지 유용한 파이프라인 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orgc5dcba2">
 <ul class="org-ul">
 <li><code>$match</code> 필터 혹은 쿼리(find와 비슷)</li>
 <li><code>$group</code> 특정한 필드를 기준으로 모으기(grouping)</li>
@@ -394,13 +399,13 @@ Pipeline Stages</a> 문서를 참고해보자.
 </div>
 </div>
 </div>
-<div id="outline-container-org91bcc37" class="outline-2">
-<h2 id="org91bcc37">백업 및 복원(Dump and Restore)</h2>
-<div class="outline-text-2" id="text-org91bcc37">
+<div id="outline-container-orge5f4ee8" class="outline-2">
+<h2 id="orge5f4ee8">백업 및 복원(Dump and Restore)</h2>
+<div class="outline-text-2" id="text-orge5f4ee8">
 </div>
-<div id="outline-container-org02121f0" class="outline-3">
-<h3 id="org02121f0">백업(Dump)</h3>
-<div class="outline-text-3" id="text-org02121f0">
+<div id="outline-container-org659e071" class="outline-3">
+<h3 id="org659e071">백업(Dump)</h3>
+<div class="outline-text-3" id="text-org659e071">
 <div class="org-src-container">
 <pre class="src src-bash">mongodump --host host.foo.bar <span style="color: #98be65;">\</span>
           --out /foo/bar/dump/directory <span style="color: #98be65;">\</span>
@@ -415,9 +420,9 @@ Pipeline Stages</a> 문서를 참고해보자.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf4d62a0" class="outline-3">
-<h3 id="orgf4d62a0">복원(Restore)</h3>
-<div class="outline-text-3" id="text-orgf4d62a0">
+<div id="outline-container-orgfa4e282" class="outline-3">
+<h3 id="orgfa4e282">복원(Restore)</h3>
+<div class="outline-text-3" id="text-orgfa4e282">
 <div class="org-src-container">
 <pre class="src src-bash">mongorestore --host host.foo.bar /foo/bar/dump/directory
 </pre>
@@ -429,13 +434,13 @@ Pipeline Stages</a> 문서를 참고해보자.
 </div>
 </div>
 </div>
-<div id="outline-container-orgfb1151b" class="outline-2">
-<h2 id="orgfb1151b">기타</h2>
-<div class="outline-text-2" id="text-orgfb1151b">
+<div id="outline-container-org7babfa0" class="outline-2">
+<h2 id="org7babfa0">기타</h2>
+<div class="outline-text-2" id="text-org7babfa0">
 </div>
-<div id="outline-container-org4551166" class="outline-3">
-<h3 id="org4551166">컬렉션 몽땅 비우기(지우기)</h3>
-<div class="outline-text-3" id="text-org4551166">
+<div id="outline-container-orgb316472" class="outline-3">
+<h3 id="orgb316472">컬렉션 몽땅 비우기(지우기)</h3>
+<div class="outline-text-3" id="text-orgb316472">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.remove({})
 </pre>
@@ -445,9 +450,9 @@ Pipeline Stages</a> 문서를 참고해보자.
 </p>
 </div>
 </div>
-<div id="outline-container-org3391875" class="outline-3">
-<h3 id="org3391875">Replica Set 에서 Primary 바꾸기</h3>
-<div class="outline-text-3" id="text-org3391875">
+<div id="outline-container-orga125b18" class="outline-3">
+<h3 id="orga125b18">Replica Set 에서 Primary 바꾸기</h3>
+<div class="outline-text-3" id="text-orga125b18">
 <p>
 삽질로 알아낸 정보라 이 방법 외에 다른 방법이 있을 수도 있음을 먼저 알린다.
 </p>
@@ -509,9 +514,13 @@ Pipeline Stages</a> 문서를 참고해보자.
 </script>
 </div>
 </div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
