--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -38,6 +38,9 @@ gtag('config', 'UA-44534026-1');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <header class="top-header">
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
@@ -59,7 +62,9 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<hr/>
+</div>
+<div class="side-ad-container"></div>
+</div>
 <div class="content-container">
 <div class="left-empty">
 </div>
@@ -71,7 +76,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc19501e">외부 링크</a></li>
+<li><a href="#orgdaf57c6">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -93,9 +98,9 @@ gtag('config', 'UA-44534026-1');
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-orgc19501e" class="outline-2">
-<h2 id="orgc19501e">외부 링크</h2>
-<div class="outline-text-2" id="text-orgc19501e">
+<div id="outline-container-orgdaf57c6" class="outline-2">
+<h2 id="orgdaf57c6">외부 링크</h2>
+<div class="outline-text-2" id="text-orgdaf57c6">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">🌏스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏The (Subjective) Spacemacs Howto</a>:
@@ -114,19 +119,6 @@ gtag('config', 'UA-44534026-1');
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</div>
-</section>
-<div class="side-ad-container">
-<ins class="adsbygoogle side-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -159,9 +151,26 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
+</section>
+<div class="side-ad-container">
+<ins class="adsbygoogle side-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</div>
+<div class="content-container">
+<div class="left-empty"></div>
+<div class="header-content">
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
-</body>
+</div><div class="side-ad-container"></div>
+</div></body>
 </html>
